# shellsuggest

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
Formula/: shellsuggest.rb
benches/: suggest.rs
docs/superpowers/plans/: 2026-04-07-shellsuggest-mvp.md
docs/superpowers/specs/: 2026-04-07-shellsuggest-design.md
plugin/: shellsuggest.plugin.zsh
spec/: cd_assist_spec.rb  config_spec.rb  daemon_spec.rb  feedback_spec.rb  migration_compat_spec.rb  multi_line_spec.rb  plugin_state_spec.rb  spec_helper.rb  terminal_session.rb
spec/integrations/: bracketed_paste_magic_spec.rb  conflict_spec.rb  vi_mode_spec.rb  wrapped_widget_spec.rb
spec/strategies/: cwd_history_spec.rb  history_seed_spec.rb  history_spec.rb  path_spec.rb  special_characters_helper.rb
spec/widgets/: accept_spec.rb  cycle_spec.rb
src/: config.rs  history_seed.rs  lib.rs  main.rs  migrate.rs
src/client/: mod.rs
src/daemon/: broker.rs  mod.rs  server.rs
src/db/: models.rs  store.rs
src/plugin/: cd_assist.rs  cwd_history.rs  history.rs  mod.rs  path.rs
src/protocol/: mod.rs
src/ranking/: mod.rs
src/runtime/: mod.rs
tests/: golden.rs  integration.rs
tests/snapshots/: golden__cd_requires_current_pwd_history.snap  golden__cwd_aware_cd.snap  golden__cwd_history_priority.snap  golden__history_fallback.snap  golden__no_match.snap  golden__vim_file_match.snap
