[package]
name = "shellsuggest"
version = "0.1.0"
edition = "2021"
description = "smarter zsh autosuggestions — ranked by your current directory"
license = "Apache-2.0"
repository = "https://github.com/syi0808/shellsuggest"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
smallvec = { version = "1", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2"
toml = "0.8"

[dev-dependencies]
insta = { version = "1", features = ["json"] }
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "suggest"
harness = false
