[package]
name = "shellsuggest"
version = "0.1.0"
edition = "2021"
description = "smarter zsh autosuggestions — ranked by your current directory"
license = "Apache-2.0"
repository = "https://github.com/syi0808/shellsuggest"

[dependencies]
serde_json = "1"
anyhow = "1"
tracing = "0.1"
libc = "0.2"
toml = "0.8"

[dependencies.clap]
version = "4"
features = [ "derive" ]

[dependencies.tokio]
version = "1"
features = [ "full" ]

[dependencies.serde]
version = "1"
features = [ "derive" ]

[dependencies.rusqlite]
version = "0.31"
features = [ "bundled" ]

[dependencies.smallvec]
version = "1"
features = [ "serde" ]

[dependencies.tracing-subscriber]
version = "0.3"
features = [ "env-filter" ]

[dev-dependencies]
tempfile = "3"

[dev-dependencies.insta]
version = "1"
features = [ "json" ]

[dev-dependencies.criterion]
version = "0.5"
features = [ "html_reports" ]

[[bench]]
name = "suggest"
harness = false
